--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
