--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Reusable React Modal Component Tutorial",
+  "name": "Reusable_React_Modal_Component_Tutorial",
   "version": "1.0.0",
   "description": "A highly reusable and configurable Modal component for large-scale React apps. Leverages React Bootstrap. Learn more at www.singlepageapplication.com!",
   "scripts": {
